Fix crossbow damage, clone error, combat log not deleting player dats